--- a/index.html
+++ b/index.html
@@ -1,10 +1,160 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-  </head>
-  <body></body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+  <link rel="stylesheet" href="./fonts/fonts.css" />
+  <link rel="stylesheet" href="./styles/global.css" />
+  <link rel="stylesheet" href="./styles/style.css" />
+</head>
+
+<body>
+  <header class="header">
+    <div class="wrapper header__wrapper">
+      <nav class="header__menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-items header__links-list-items_no-bullit">
+            <a class="header__link header__link_active" href="#0">главная</a>
+          </li>
+          <li class="header__links-list-items">
+            <a class="header__link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-items">
+            <a class="header__link" href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <a href="#" class="header__logo">
+        <img class="header__logo-image" src="./images/logo-black.svg" alt="Логотип проекта черный" />
+      </a>
+      <div class="address header__address">
+        <a class="tel-link header__tel-link" href="tel:+9 999 555 5555">+9 999 555 5555</a>
+        <a class="mail-link header__mail-link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p class="address header__address"> наб. Принсенграхт 263-265, Амстердам</p>
+      </div>
+
+    </div>
+  </header>
+  <main>
+    <section class="cover">
+      <div class="wrapper cover__wrapper">
+        <h1 class="cover__title">
+          <div class="cover__row-start">он<span>о</span></div>
+          <div class="cover__row-center">теб<span>е</span></div>
+          <div class="cover__row-end">н<span>адо</span></div>
+        </h1>
+        <div class="cover__description">
+          <p class="cover__description-text"><span>Аукцион</span> <span>вещей,</span> <span>в</span>
+            <span>которые</span> <span>никто</span> <span>не</span> <span>верил</span>
+          </p>
+          <button class="bet-button">СДЕЛАТЬ СТАВКУ</button>
+
+        </div>
+      </div>
+    </section>
+    <section class="lots">
+      <h2 class="lots__heading">Лоты</h2>
+      <ul class="lots__card-list">
+        <li class="lots__card-list-item">
+          <a class="card-link" href="#0">
+            <article class="card card_type_film">
+              <h3 class="card__title">Фильм режиссера, который бросил киношколу</h3>
+              <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не
+                знали, что режиссёр — Пол Томас Андерсон?</p>
+
+            </article>
+          </a>
+        </li>
+        <li class="lots__card-list-item">
+          <a class="card-link" href="#0">
+            <article class="card card_type_book">
+              <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
+              <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на
+                древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная
+                с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на
+                «Улисса» Джеймса Джойса?</p>
+
+            </article>
+          </a>
+        </li>
+        <li class="lots__card-list-item">
+          <a class="card-link" href="#0">
+            <article class="card card_type_picture">
+              <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+              <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на
+                инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали,
+                что это — одна из революционных работ Кандинского?</p>
+
+            </article>
+          </a>
+        </li>
+      </ul>
+      <a class="lots__look-more-link" href="#0">посмотреть больше</a>
+    </section>
+    <section class="about">
+      <div class="about__column">
+        <div class="about__logo" href="#0">
+          <img class="about__logo-image" src="./images/logo-white.svg" alt="Логотип проекта белый" />
+        </div>
+      </div>
+      <div class="about__column">
+        <h2 class="about__title">Об аукционе</h2>
+        <div class="about__text">
+          <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не
+            должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую
+            может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+          <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные
+            критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику,
+            кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в
+            эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer class="footer">
+    <div class="wrapper">
+      <address class="address">
+        <div class="footer__address">
+          <a href="tel:+9 999 555 5555">+9 999 555 5555</a><br />
+          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br />
+          <p> наб. Принсенграхт 263-265,<br /> Амстердам</p>
+
+      </address>
+      <nav class="footer__menu">
+        <ul class="footer__menu-list">
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link footer__menu-link_active">главная</a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a class="footer__menu-link" href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#0">
+            <img class="footer__social-icon" src="./images/yt.svg" alt="Иконка youTube канала" />
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#0">
+            <img class="footer__social-icon" src="./images/vk.svg" alt="Иконка сайта ВКонтакте" />
+          </a>
+        </li>
+        <li class="footer__menu-list-item">
+          <a class="footer__social-link" href="#0">
+            <img class="footer__social-icon" src="./images/pinterest.svg" alt="Иконка сайта Pinterest" />
+          </a>
+        </li>
+      </ul>
+    </div>
+  </footer>
+</body>
+
 </html>
